--- a/angular.json
+++ b/angular.json
@@ -58,7 +58,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "reactive-angular-course:build"
+            "browserTarget": "reactive-angular-course:build",
+            "proxyConfig": "proxy.json"
           },
           "configurations": {
             "production": {
